--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             const [watermarkFontSize, setWatermarkFontSize] = useState(30); // Font size of the watermark
             const [watermarkFontColor, setWatermarkFontColor] = useState('#FFFFFF'); // Font color of the watermark
             const [watermarkOpacity, setWatermarkOpacity] = useState(0.7); // Opacity of the watermark
+            const [watermarkFontFamily, setWatermarkFontFamily] = useState('Inter, sans-serif'); // New: Font family for the watermark
             const [fileNamePrefix, setFileNamePrefix] = useState(''); // Prefix for converted file names
             const [fileNameSuffix, setFileNameSuffix] = useState('-converted'); // Suffix for converted file names
             const [isLoading, setIsLoading] = useState(false); // Loading state for conversion process
@@ -73,6 +74,7 @@
 
             const fileInputRef = useRef(null); // Ref for the hidden file input element
             const convertedImagesRef = useRef(null); // Ref for the converted images section
+            const watermarkPreviewRef = useRef(null); // Ref for the watermark preview canvas
 
             // Function to handle file selection from input or drag-and-drop
             const handleFileChange = async (e) => {
@@ -190,6 +192,52 @@
                 }
             }, [maintainAspectRatio, selectedFiles]);
 
+            // Function to draw watermark on a given canvas context, with optional scaling
+            const drawWatermark = (ctx, canvasWidth, canvasHeight, scale = 1) => {
+                if (!watermarkText) return; // Don't draw if no text
+
+                const scaledFontSize = watermarkFontSize * scale; // Scale font size based on preview scale
+                ctx.font = `${scaledFontSize}px ${watermarkFontFamily}`;
+                ctx.fillStyle = watermarkFontColor;
+                ctx.globalAlpha = watermarkOpacity;
+                ctx.textAlign = 'left';
+                ctx.textBaseline = 'top';
+
+                const textMetrics = ctx.measureText(watermarkText);
+                const textWidth = textMetrics.width;
+                const textHeight = scaledFontSize; // Approximate height
+
+                let x, y;
+
+                switch (watermarkPosition) {
+                    case 'topLeft':
+                        x = 10 * scale; // Scale position
+                        y = 10 * scale; // Scale position
+                        break;
+                    case 'topRight':
+                        x = canvasWidth - textWidth - (10 * scale);
+                        y = 10 * scale;
+                        break;
+                    case 'bottomLeft':
+                        x = 10 * scale;
+                        y = canvasHeight - textHeight - (10 * scale);
+                        break;
+                    case 'bottomRight':
+                        x = canvasWidth - textWidth - (10 * scale);
+                        y = canvasHeight - textHeight - (10 * scale);
+                        break;
+                    case 'center':
+                        x = (canvasWidth - textWidth) / 2;
+                        y = (canvasHeight - textHeight) / 2;
+                        break;
+                    default:
+                        x = 10 * scale;
+                        y = 10 * scale;
+                }
+                ctx.fillText(watermarkText, x, y);
+                ctx.globalAlpha = 1.0; // Reset alpha
+            };
+
             // Core function to convert images
             const convertImages = async () => {
                 if (selectedFiles.length === 0) {
@@ -245,46 +293,8 @@
 
                                     // Apply watermark if text is provided and advanced options are shown
                                     if (showAdvancedOptions && watermarkText) {
-                                        ctx.font = `${watermarkFontSize}px Inter, sans-serif`; // Use Inter font
-                                        ctx.fillStyle = watermarkFontColor;
-                                        ctx.globalAlpha = watermarkOpacity;
-                                        ctx.textAlign = 'left';
-                                        ctx.textBaseline = 'top';
-
-                                        const textMetrics = ctx.measureText(watermarkText);
-                                        const textWidth = textMetrics.width;
-                                        const textHeight = watermarkFontSize; // Approximate height
-
-                                        let x, y;
-
-                                        // Calculate watermark position
-                                        switch (watermarkPosition) {
-                                            case 'topLeft':
-                                                x = 10;
-                                                y = 10;
-                                                break;
-                                            case 'topRight':
-                                                x = canvas.width - textWidth - 10;
-                                                y = 10;
-                                                break;
-                                            case 'bottomLeft':
-                                                x = 10;
-                                                y = canvas.height - textHeight - 10;
-                                                break;
-                                            case 'bottomRight':
-                                                x = canvas.width - textWidth - 10;
-                                                y = canvas.height - textHeight - 10;
-                                                break;
-                                            case 'center':
-                                                x = (canvas.width - textWidth) / 2;
-                                                y = (canvas.height - textHeight) / 2;
-                                                break;
-                                            default:
-                                                x = 10;
-                                                y = 10;
-                                        }
-                                        ctx.fillText(watermarkText, x, y);
-                                        ctx.globalAlpha = 1.0; // Reset alpha
+                                        // For actual conversion, scale is 1 (no scaling needed as it's original size or resized size)
+                                        drawWatermark(ctx, currentWidth, currentHeight, 1);
                                     }
 
                                     // Determine output MIME type and quality based on selected format
@@ -346,6 +356,75 @@
                     convertedImagesRef.current.scrollIntoView({ behavior: 'smooth', block: 'start' });
                 }
             }, [convertedImages]); // Dependency array includes convertedImages
+
+            // useEffect for watermark preview
+            useEffect(() => {
+                const canvas = watermarkPreviewRef.current;
+                if (!canvas) return;
+
+                const ctx = canvas.getContext('2d');
+                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear previous drawing
+
+                if (selectedFiles.length > 0 && showAdvancedOptions && selectedFiles[0].thumbnailUrl) {
+                    const img = new Image();
+                    img.onload = () => {
+                        const originalImgWidth = img.width;
+                        const originalImgHeight = img.height;
+
+                        const maxWidth = 300;
+                        const maxHeight = 200;
+                        let previewWidth = originalImgWidth;
+                        let previewHeight = originalImgHeight;
+                        let scaleFactor = 1;
+
+                        // Calculate scaling to fit within preview area
+                        if (previewWidth > maxWidth || previewHeight > maxHeight) {
+                            const widthRatio = maxWidth / previewWidth;
+                            const heightRatio = maxHeight / previewHeight;
+                            scaleFactor = Math.min(widthRatio, heightRatio);
+
+                            previewWidth = originalImgWidth * scaleFactor;
+                            previewHeight = originalImgHeight * scaleFactor;
+                        }
+                        
+                        canvas.width = previewWidth;
+                        canvas.height = previewHeight;
+                        ctx.drawImage(img, 0, 0, previewWidth, previewHeight);
+                        drawWatermark(ctx, previewWidth, previewHeight, scaleFactor); // Pass scaleFactor to drawWatermark
+                    };
+                    img.onerror = () => {
+                        console.error("プレビュー画像の読み込みに失敗しました。");
+                        // Display a message on canvas if image fails to load
+                        ctx.fillStyle = '#FF0000';
+                        ctx.font = '16px Arial';
+                        ctx.textAlign = 'center'; // Center the error text
+                        ctx.textBaseline = 'middle';
+                        canvas.width = 300; // Set default preview canvas size
+                        canvas.height = 200;
+                        ctx.fillText('画像読み込みエラー', canvas.width / 2, canvas.height / 2);
+                    };
+                    img.src = selectedFiles[0].thumbnailUrl;
+                } else if (showAdvancedOptions && selectedFiles.length === 0) {
+                    // Display a prompt if no image is selected for preview
+                    ctx.fillStyle = '#6B7280'; /* gray-500 */
+                    ctx.font = '16px Inter, sans-serif';
+                    ctx.textAlign = 'center';
+                    ctx.textBaseline = 'middle';
+                    canvas.width = 300; // Set a default preview canvas size when no image
+                    canvas.height = 200;
+                    ctx.fillText('画像をアップロードしてウォーターマークをプレビュー', canvas.width / 2, canvas.height / 2);
+                } else if (showAdvancedOptions && selectedFiles.length > 0 && !selectedFiles[0].thumbnailUrl) {
+                     // Display a message if image is not a standard image type for preview
+                    ctx.fillStyle = '#6B7280'; /* gray-500 */
+                    ctx.font = '16px Inter, sans-serif';
+                    ctx.textAlign = 'center';
+                    ctx.textBaseline = 'middle';
+                    canvas.width = 300; // Set a default preview canvas size
+                    canvas.height = 200;
+                    ctx.fillText('このファイルのプレビューは利用できません', canvas.width / 2, canvas.height / 2);
+                }
+            }, [selectedFiles, watermarkText, watermarkPosition, watermarkFontSize, watermarkFontColor, watermarkOpacity, watermarkFontFamily, showAdvancedOptions]);
+
 
             // Function to download a single converted image
             const downloadImage = (image) => {
@@ -456,8 +535,8 @@
                             <button
                                 onClick={() => setShowAdvancedOptions(!showAdvancedOptions)}
                                 className="px-8 py-4 bg-gradient-to-r from-gray-700 to-gray-900 text-white font-bold text-lg rounded-full shadow-lg
-                                           hover:from-gray-800 hover:to-black focus:outline-none focus:ring-4 focus:ring-gray-400 focus:ring-offset-2
-                                           transition-all transform hover:scale-105 active:scale-95 flex items-center justify-center mx-auto"
+                                   hover:from-gray-800 hover:to-black focus:outline-none focus:ring-4 focus:ring-gray-400 focus:ring-offset-2
+                                   transition-all transform hover:scale-105 active:scale-95 flex items-center justify-center mx-auto"
                             >
                                 {showAdvancedOptions ? '高度な設定を隠す' : '高度な設定を表示'}
                                 <svg
@@ -586,7 +665,26 @@
                                         />
                                         <span className="text-base text-gray-600 mt-2 block">{Math.round(watermarkOpacity * 100)}%</span>
                                     </div>
-                                    <div>
+                                    {/* Watermark Font Family Selection */}
+                                    <div className="mb-3">
+                                        <label htmlFor="watermarkFontFamily" className="block text-gray-600 text-sm mb-1">フォント</label>
+                                        <select
+                                            id="watermarkFontFamily"
+                                            value={watermarkFontFamily}
+                                            onChange={(e) => setWatermarkFontFamily(e.target.value)}
+                                            className="w-full p-3 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 text-lg shadow-sm"
+                                        >
+                                            <option value="Inter, sans-serif">Inter (デフォルト)</option>
+                                            <option value="Arial, sans-serif">Arial</option>
+                                            <option value="Helvetica, sans-serif">Helvetica</option>
+                                            <option value="Verdana, sans-serif">Verdana</option>
+                                            <option value="Georgia, serif">Georgia</option>
+                                            <option value="Times New Roman, serif">Times New Roman</option>
+                                            <option value="Courier New, monospace">Courier New</option>
+                                        </select>
+                                    </div>
+                                    {/* Watermark Position Selection */}
+                                    <div className="mb-4">
                                         <label htmlFor="watermarkPosition" className="block text-gray-600 text-sm mb-1">位置</label>
                                         <select
                                             id="watermarkPosition"
@@ -600,6 +698,11 @@
                                             <option value="bottomRight">右下</option>
                                             <option value="center">中央</option>
                                         </select>
+                                    </div>
+
+                                    {/* Watermark Preview Canvas */}
+                                    <div className="w-full bg-gray-100 rounded-lg overflow-hidden border border-gray-200 shadow-inner flex items-center justify-center" style={{ minHeight: '200px' }}>
+                                        <canvas ref={watermarkPreviewRef} className="max-w-full max-h-full block"></canvas>
                                     </div>
                                 </div>
 
